packages/flutter_tools/test/data/dart_dependencies_test/syntax_error/foo.dart
// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

import bad programmer!
